# points

./: .gitignore  README.md  pyproject.toml
src/points/: io.py
src/points/models/: fast_forces.py  particles.py  scenarios.py
src/points/sim/: runner.py  scenarios.py
src/points/view/: animate.py
trajectory.zarr/com/: zarr.json
trajectory.zarr/com/c/0/: 0
trajectory.zarr/com/c/1/: 0
trajectory.zarr/com/c/10/: 0
trajectory.zarr/com/c/100/: 0
trajectory.zarr/com/c/101/: 0
trajectory.zarr/com/c/102/: 0
trajectory.zarr/com/c/103/: 0
trajectory.zarr/com/c/104/: 0
trajectory.zarr/com/c/105/: 0
trajectory.zarr/com/c/106/: 0
trajectory.zarr/com/c/107/: 0
trajectory.zarr/com/c/108/: 0
trajectory.zarr/com/c/109/: 0
trajectory.zarr/com/c/11/: 0
trajectory.zarr/com/c/110/: 0
trajectory.zarr/com/c/111/: 0
trajectory.zarr/com/c/112/: 0
trajectory.zarr/com/c/113/: 0
trajectory.zarr/com/c/114/: 0
trajectory.zarr/com/c/115/: 0
trajectory.zarr/com/c/116/: 0
trajectory.zarr/com/c/117/: 0
trajectory.zarr/com/c/118/: 0
trajectory.zarr/com/c/119/: 0
trajectory.zarr/com/c/12/: 0
trajectory.zarr/com/c/120/: 0
trajectory.zarr/com/c/121/: 0
trajectory.zarr/com/c/122/: 0
trajectory.zarr/com/c/123/: 0
trajectory.zarr/com/c/124/: 0
trajectory.zarr/com/c/125/: 0
trajectory.zarr/com/c/126/: 0
trajectory.zarr/com/c/127/: 0
trajectory.zarr/com/c/128/: 0
trajectory.zarr/com/c/129/: 0
trajectory.zarr/com/c/13/: 0
trajectory.zarr/masses/: zarr.json
trajectory.zarr/masses/c/: 0
trajectory.zarr/positions/: zarr.json
(+965 files in other folders)
